# ChangeLog for sci-libs/gmsh
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  05 Aug 2008; Oliver Borm (boroli) <oli.borm@web.de> +gmsh-2.2.3.ebuild,
  +files/gmsh-2.2.3-metis.patch, +files/gmsh-2.2.3.patch:
  Version bump and added opencascade support.

  26 Feb 2008; (Tommy[D]) tommy100@gmx.de -gmsh-2.0.8.ebuild:
  Drop old version

  25 Feb 2008; Oliver Borm (boroli) <oli.borm@web.de> gmsh-2.0.8.ebuild,
  +gmsh-2.1.0.ebuild:
  New upstream release and updated dependencies for doc USE-flag

  16 Oct 2007; Jakub Moc <jakub@gentoo.org> gmsh-2.0.8.ebuild:
  Fix dependencies; sort use flag alphabetically

  15 Oct 2007; Oliver Borm (boroli) <oli.borm@web.de> +metadata.xml,
  +gmsh-2.0.8.ebuild:
  New ebuild for gmsh with two new USE Flags as reported at bug 195980.
